Added a scroll in the notes area

--- a/src/Components/MobileComponents/Displaynotes1.css
+++ b/src/Components/MobileComponents/Displaynotes1.css
@@ -85,8 +85,10 @@
     cursor: pointer;
 }
 
-.chat-box{
+.chat-box1{
+    max-height:58.2vh;
     color: black;
+    overflow-y: auto;
 }
 .chat-message{
     display: flex;
